Adjusted the tutorial based on new suggestions

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -30,10 +30,10 @@
    "metadata": {},
    "source": [
     "In general, we can divide those measures into two groups, depending on their input:\n",
-    "1. Working on molecular fingerprints (vectorized molecules). There are specific metrics for binary and count fingerprints.\n",
+    "1. Working on molecular fingerprints (vectorized molecules). Different metrics and metric variants are used for binary and count fingerprints.\n",
     "2. Using molecules (RDKit ``Mol`` objects) directly.\n",
     "\n",
-    "Most functions are naturally defined as similarities - the higher, the more similar two molecules are. Every similarity also has a corresponding distance function implemented, usually equal to `1 - similarity`.\n",
+    "Most functions are naturally defined as similarities - the higher, the more similar two molecules are. Most similarity functions have a bounded value range, typically [0,1]. Every similarity also has a corresponding distance function implemented, usually equal to `1 - similarity`.\n",
     "\n",
     "Additionally, for batch computation, e.g. pairwise similarity measurements, every metric also has a bulk function, which works on whole matrices (or lists of molecules)."
    ]
@@ -55,12 +55,12 @@
     "- only considering \"on\" bits, i.e. 1s in vector representations\n",
     "- including both \"off\" and \"on\" bits\n",
     "\n",
-    "For two binary vectors `x` and `y`, we can define four values, which are used to define metrics:\n",
+    "For two binary vectors `x` and `y`, we can define four values, which are used to compute metrics:\n",
     "\n",
     "  - $a$ – $|x \\cap y|$, the number of common \"on\" bits\n",
-    "  - $b$ – the number of positions where $x$ is 1 and $y$ is 0\n",
-    "  - $c$ – the number of positions where $x$ is 0 and $y$ is 1\n",
-    "  - $d$ – the number of positions where both are 0, the number of common \"off\" bits\n",
+    "  - $b$ – $|x \\cap \\bar{y}|$, the number of positions where $x$ is 1 and $y$ is 0\n",
+    "  - $c$ – $|\\bar{x} \\cap y|$, the number of positions where $x$ is 0 and $y$ is 1\n",
+    "  - $d$ – $|\\bar{x} \\cap \\bar{y}|$, the number of positions where both are 0, the number of common \"off\" bits\n",
     "\n",
     "We can also mark $|x|$ as total number of \"on\" bits (1s) in the $x$ vector.\n",
     "\n",
@@ -70,7 +70,7 @@
     "  sim(x, y) = \\frac{|x \\cap y|}{|x \\cup y|} = \\frac{|x \\cap y|}{|x| + |y| - |x \\cap y|} = \\frac{a}{a + b + c}\n",
     "  $$\n",
     "\n",
-    "[Tanimoto count similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_count_similarity.html) is an extension to count vectors, utilizing dot product as a measure of \"common bits\", and vector length instead of just sum of 1s. The larger the dot product, the more similar are two vectors. It is defined as:\n",
+    "[Tanimoto count similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_count_similarity.html) is an extension to count vectors, utilizing dot product as a measure of \"common bits\", and vector length instead of just sum of 1s. The larger the dot product, the more similar the two vectors are. It is defined as:\n",
     "\n",
     "  $$\n",
     "  sim(x, y) = \\frac{x \\cdot y}{\\|x\\|^2 + \\|y\\|^2 - x \\cdot y}\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T18:50:39.247074Z",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T18:50:40.182983Z",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T18:50:40.189778Z",
@@ -247,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some similarities include molecule structure directly in their calculation. Those can be sometimes more flexible, as they don't lose any information during the fingerprint calculation step.\n",
+    "Some similarities include molecule structure directly in their calculation. Sometimes they can be more flexible, as they don't lose any information during the fingerprint calculation step.\n",
     "\n",
     "[Fraggle similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.fraggle_similarity.html) is designed to be less sensitive to small changes in the middle of molecule, compared to fingerprint-based measures. It looks more on the \"overall shape similarity\" of molecules. Its calculation consists of a few steps:\n",
-    "- fragment molecule into \"interesting\" substructures by acyclic and ring cuts, leaving only “large” parts of a molecule (>60%)\n",
+    "- fragment molecule into \"interesting\" substructures by acyclic and ring cuts, leaving only “large” parts of the molecule (>60%)\n",
     "- compare fragments with Tversky similarity, keep only appropriately similar ones\n",
-    "- compure [RDKit fingerprints](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html) with path length 5, compare with Tanimoto similarity\n",
+    "- compute [RDKit fingerprints](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html) with path length 5, compare with Tanimoto similarity\n",
     "- largest Tanimoto similarity is the Fraggle similarity value\n",
     "\n",
     "This measure is asymmetric, i.e. `sim(mol_a, mol_b)` can be potentially quite different from `sim(mol_b, mol_a)`. Its value range is $[0, 1]$.\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T18:51:25.652537Z",
@@ -332,11 +332,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MCS similarity query-reference: 0.26\n",
-      "MCS similarity reference-query: 0.26\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'mcs_similarity' from 'skfp.distances' (e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\skfp\\distances\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mskfp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdistances\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mcs_similarity\n\u001b[0;32m      3\u001b[0m mcs_sim \u001b[38;5;241m=\u001b[39m mcs_similarity(mol_query, mol_ref)\n\u001b[0;32m      4\u001b[0m mcs_sim_reverse \u001b[38;5;241m=\u001b[39m mcs_similarity(mol_ref, mol_query)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'mcs_similarity' from 'skfp.distances' (e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\skfp\\distances\\__init__.py)"
      ]
     }
    ],
@@ -367,7 +370,7 @@
    "source": [
     "scikit-fingerprints is designed and tested to be fully compatible with scikit-learn. As such, you can use similarity metrics in your ML pipelines, e.g. for [k nearest neighbors classifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html). Same mechanism would also work for density-based clustering like [DBSCAN](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html).\n",
     "\n",
-    "Let's see how this works using a kNN classifier on [BACE dataset](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html#skfp.datasets.moleculenet.load_bace). Note that in scikit-learn, functions expect **distances**, not similarities, so you have to use an appropriate function."
+    "Let's see how this works using a kNN classifier on [BACE dataset](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html#skfp.datasets.moleculenet.load_bace). Note that in scikit-learn, the interface expects **distances**, not similarities, so you have to use an appropriate function."
    ]
   },
   {
@@ -387,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jakub/.cache/pypoetry/virtualenvs/scikit-fingerprints-VjWItXgH-py3.10/lib/python3.10/site-packages/huggingface_hub/file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -448,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUROC: 71.21%\n"
+      "AUROC: 71.49%\n"
      ]
     }
    ],
@@ -486,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T19:03:52.314082Z",
@@ -506,7 +509,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,12 +545,12 @@
     "id": "V2jSyK4TdYd3"
    },
    "source": [
-    "If pass a single array, then the similarities will be computed between its rows. This is useful for self-similarity computation, e.g. evaluation chemical diversity of a dataset."
+    "If we pass a single array, then the similarities will be computed between its rows. This is useful for self-similarity computation, e.g. evaluation chemical diversity of a dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T19:03:53.498982Z",
@@ -567,7 +570,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-01T19:06:16.941566Z",
@@ -645,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -658,7 +661,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.4 ms ± 2.03 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "11.9 ms ± 1.7 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -668,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -678,10 +681,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "675 µs ± 64.3 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+     "ename": "NameError",
+     "evalue": "name 'bulk_tanimoto_count_similarity' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_line_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtimeit\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-r 3 -n 10 [bulk_tanimoto_count_similarity(fps, fps)]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:2480\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[1;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[0;32m   2478\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocal_ns\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_local_scope(stack_depth)\n\u001b[0;32m   2479\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m-> 2480\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2482\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[0;32m   2483\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[0;32m   2484\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[0;32m   2485\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:1189\u001b[0m, in \u001b[0;36mExecutionMagics.timeit\u001b[1;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[0;32m   1186\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m time_number \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m:\n\u001b[0;32m   1187\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m-> 1189\u001b[0m all_runs \u001b[38;5;241m=\u001b[39m \u001b[43mtimer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrepeat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepeat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1190\u001b[0m best \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(all_runs) \u001b[38;5;241m/\u001b[39m number\n\u001b[0;32m   1191\u001b[0m worst \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(all_runs) \u001b[38;5;241m/\u001b[39m number\n",
+      "File \u001b[1;32me:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\timeit.py:206\u001b[0m, in \u001b[0;36mTimer.repeat\u001b[1;34m(self, repeat, number)\u001b[0m\n\u001b[0;32m    204\u001b[0m r \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(repeat):\n\u001b[1;32m--> 206\u001b[0m     t \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    207\u001b[0m     r\u001b[38;5;241m.\u001b[39mappend(t)\n\u001b[0;32m    208\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:173\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    171\u001b[0m gc\u001b[38;5;241m.\u001b[39mdisable()\n\u001b[0;32m    172\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 173\u001b[0m     timing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gcold:\n",
+      "File \u001b[1;32m<magic-timeit>:1\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bulk_tanimoto_count_similarity' is not defined"
      ]
     }
    ],
@@ -693,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Speedup is visible even on such a small sample. When you go into hundreds or thousands of compounds, size typical for real-world datasets, it is often degrees of magnitude."
+    "Speedup is visible even on such a small sample. For hundreds or thousands of compounds the time performance can be improved by several orders of magnitude."
    ]
   }
  ],
@@ -702,7 +714,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
