Add missing import

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:39.247074Z",
-     "iopub.status.busy": "2025-04-01T18:50:39.246831Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.182037Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.181483Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:39.247058Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.013720Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.013620Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.975129Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.974801Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.013705Z"
     }
    },
    "outputs": [
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:40.182983Z",
-     "iopub.status.busy": "2025-04-01T18:50:40.182758Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.188856Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.188118Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:40.182966Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.975668Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.975477Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.978498Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.978236Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.975658Z"
     }
    },
    "outputs": [
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:40.189778Z",
-     "iopub.status.busy": "2025-04-01T18:50:40.189495Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.202394Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.201618Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:40.189756Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.978897Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.978799Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.993434Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.993128Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.978888Z"
     }
    },
    "outputs": [
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:51:25.652537Z",
-     "iopub.status.busy": "2025-04-01T18:51:25.652224Z",
-     "iopub.status.idle": "2025-04-01T18:51:25.753850Z",
-     "shell.execute_reply": "2025-04-01T18:51:25.753344Z",
-     "shell.execute_reply.started": "2025-04-01T18:51:25.652510Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.993884Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.993772Z",
+     "iopub.status.idle": "2025-04-05T16:10:58.068686Z",
+     "shell.execute_reply": "2025-04-05T16:10:58.068353Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.993874Z"
     }
    },
    "outputs": [
@@ -319,27 +319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:52:51.288381Z",
-     "iopub.status.busy": "2025-04-01T18:52:51.288130Z",
-     "iopub.status.idle": "2025-04-01T18:52:51.292273Z",
-     "shell.execute_reply": "2025-04-01T18:52:51.291780Z",
-     "shell.execute_reply.started": "2025-04-01T18:52:51.288366Z"
+     "iopub.execute_input": "2025-04-05T16:10:58.069216Z",
+     "iopub.status.busy": "2025-04-05T16:10:58.069058Z",
+     "iopub.status.idle": "2025-04-05T16:10:58.071897Z",
+     "shell.execute_reply": "2025-04-05T16:10:58.071616Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:58.069204Z"
     },
     "id": "OQNn3USQYCWW"
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'mcs_similarity' from 'skfp.distances' (e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\skfp\\distances\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mskfp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdistances\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mcs_similarity\n\u001b[0;32m      3\u001b[0m mcs_sim \u001b[38;5;241m=\u001b[39m mcs_similarity(mol_query, mol_ref)\n\u001b[0;32m      4\u001b[0m mcs_sim_reverse \u001b[38;5;241m=\u001b[39m mcs_similarity(mol_ref, mol_query)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'mcs_similarity' from 'skfp.distances' (e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\skfp\\distances\\__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCS similarity query-reference: 0.26\n",
+      "MCS similarity reference-query: 0.26\n"
      ]
     }
    ],
@@ -375,25 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:59:07.062240Z",
-     "iopub.status.busy": "2025-04-01T18:59:07.062034Z",
-     "iopub.status.idle": "2025-04-01T18:59:14.219629Z",
-     "shell.execute_reply": "2025-04-01T18:59:14.218956Z",
-     "shell.execute_reply.started": "2025-04-01T18:59:07.062224Z"
+     "iopub.execute_input": "2025-04-05T16:10:58.072776Z",
+     "iopub.status.busy": "2025-04-05T16:10:58.072636Z",
+     "iopub.status.idle": "2025-04-05T16:11:02.154555Z",
+     "shell.execute_reply": "2025-04-05T16:11:02.154118Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:58.072766Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -436,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:00:19.243482Z",
-     "iopub.status.busy": "2025-04-01T19:00:19.242818Z",
-     "iopub.status.idle": "2025-04-01T19:00:23.301436Z",
-     "shell.execute_reply": "2025-04-01T19:00:23.300786Z",
-     "shell.execute_reply.started": "2025-04-01T19:00:19.243463Z"
+     "iopub.execute_input": "2025-04-05T16:11:02.154931Z",
+     "iopub.status.busy": "2025-04-05T16:11:02.154826Z",
+     "iopub.status.idle": "2025-04-05T16:11:04.425998Z",
+     "shell.execute_reply": "2025-04-05T16:11:04.425676Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:02.154922Z"
     }
    },
    "outputs": [
@@ -451,7 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUROC: 71.49%\n"
+      "AUROC: 71.21%\n"
      ]
     }
    ],
@@ -489,14 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:03:52.314082Z",
-     "iopub.status.busy": "2025-04-01T19:03:52.313529Z",
-     "iopub.status.idle": "2025-04-01T19:03:52.322344Z",
-     "shell.execute_reply": "2025-04-01T19:03:52.321797Z",
-     "shell.execute_reply.started": "2025-04-01T19:03:52.314062Z"
+     "iopub.execute_input": "2025-04-05T16:11:04.426528Z",
+     "iopub.status.busy": "2025-04-05T16:11:04.426407Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.091156Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.090838Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:04.426517Z"
     },
     "id": "fUtOB4EAYCWW"
    },
@@ -509,7 +498,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,14 +539,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:03:53.498982Z",
-     "iopub.status.busy": "2025-04-01T19:03:53.498733Z",
-     "iopub.status.idle": "2025-04-01T19:03:53.509360Z",
-     "shell.execute_reply": "2025-04-01T19:03:53.508857Z",
-     "shell.execute_reply.started": "2025-04-01T19:03:53.498959Z"
+     "iopub.execute_input": "2025-04-05T16:11:05.091579Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.091474Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.498949Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.498416Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.091570Z"
     },
     "id": "Jt0wjKx7djie"
    },
@@ -570,7 +559,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:06:16.941566Z",
-     "iopub.status.busy": "2025-04-01T19:06:16.941088Z",
-     "iopub.status.idle": "2025-04-01T19:06:16.950325Z",
-     "shell.execute_reply": "2025-04-01T19:06:16.949395Z",
-     "shell.execute_reply.started": "2025-04-01T19:06:16.941536Z"
+     "iopub.execute_input": "2025-04-05T16:11:05.499424Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.499325Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.504235Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.503935Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.499415Z"
     },
     "id": "U7UsgXGXgaod"
    },
@@ -648,10 +637,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-04-05T16:11:05.504711Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.504543Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.661892Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.661331Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.504702Z"
     },
     "id": "pbGGAxWhhmPt",
     "outputId": "aa6f54cc-5886-4955-c55c-7a671729df41"
@@ -661,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.9 ms ± 1.7 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "4.72 ms ± 148 μs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -671,29 +667,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-04-05T16:11:05.662331Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.662235Z",
+     "iopub.status.idle": "2025-04-05T16:11:06.086372Z",
+     "shell.execute_reply": "2025-04-05T16:11:06.086046Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.662323Z"
+    },
     "id": "9e9AtjEThn6U",
-    "outputId": "e227bf9c-187e-4730-e025-d92f10fd9bf1"
+    "outputId": "e227bf9c-187e-4730-e025-d92f10fd9bf1",
+    "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'bulk_tanimoto_count_similarity' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_line_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtimeit\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-r 3 -n 10 [bulk_tanimoto_count_similarity(fps, fps)]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:2480\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[1;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[0;32m   2478\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocal_ns\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_local_scope(stack_depth)\n\u001b[0;32m   2479\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m-> 2480\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2482\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[0;32m   2483\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[0;32m   2484\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[0;32m   2485\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:1189\u001b[0m, in \u001b[0;36mExecutionMagics.timeit\u001b[1;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[0;32m   1186\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m time_number \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m:\n\u001b[0;32m   1187\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m-> 1189\u001b[0m all_runs \u001b[38;5;241m=\u001b[39m \u001b[43mtimer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrepeat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepeat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1190\u001b[0m best \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(all_runs) \u001b[38;5;241m/\u001b[39m number\n\u001b[0;32m   1191\u001b[0m worst \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(all_runs) \u001b[38;5;241m/\u001b[39m number\n",
-      "File \u001b[1;32me:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\timeit.py:206\u001b[0m, in \u001b[0;36mTimer.repeat\u001b[1;34m(self, repeat, number)\u001b[0m\n\u001b[0;32m    204\u001b[0m r \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(repeat):\n\u001b[1;32m--> 206\u001b[0m     t \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    207\u001b[0m     r\u001b[38;5;241m.\u001b[39mappend(t)\n\u001b[0;32m    208\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:173\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    171\u001b[0m gc\u001b[38;5;241m.\u001b[39mdisable()\n\u001b[0;32m    172\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 173\u001b[0m     timing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gcold:\n",
-      "File \u001b[1;32m<magic-timeit>:1\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'bulk_tanimoto_count_similarity' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 315.64 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "13.9 ms ± 19.4 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -714,7 +710,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
